--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ jlink {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
@@ -34,4 +35,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+configurations {
+    testCompile
 }
