--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.12.0'
 }
 
@@ -12,7 +12,7 @@ repositories {
 }
 
 javafx {
-    version = "16"
+    version = '17.0.2'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
