adding the right way of extracting the jar file and all the remaining implementation of all functions

--- a/build.gradle
+++ b/build.gradle
@@ -44,3 +44,13 @@ test {
 configurations {
     testCompile
 }
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    manifest {
+        attributes 'Main-Class': 'org.openjfx.Main'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
